2006-10-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/output-lib.scm (string-finger::calc-text): new function

	* lily/new-fingering-engraver.cc (add_fingering): refactor; make
	generic for fingering & string number. Use for string-finger. 

	* scm/define-music-types.scm (music-descriptions): add StringFingerEvent

	* lily/fingering-engraver.cc (listen_string_finger): new function

	* scm/define-grobs.scm (all-grob-descriptions): add StringFinger

	* scm/define-context-properties.scm
	(all-user-translation-properties): add stringFingerOrientations

2006-10-11  Jürgen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-dots.mf (new), mf/parmesan-generic.mf,
	ly/engraver-init.ly: Added vaticana-style augmentum dot glyph.

	* lily/dots.cc: Added style property for dots.

	* mf/parmesan-heads.mf: Fix typo in comment.

	* mf/feta-bolletjes.mf, scm/output-lib.scm: Fix longa notes bug by
	adding longa head to feta font and removing obsolete default
	mapping scheme code.

2006-10-10  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/output-lib.scm (fingering::calc-text): use origin
	event-property, not music-property.

	* lily/lilypond.rc.in: spell my name correctly.

2006-10-10  Joe Neeman  <joeneeman@gmail.com>

	* lily/grob.cc (pure_height): only add minimum-Y-extent if we
	already have a non-empty extent. Fixes estimation for Hara-kiri
	staves.

2006-10-09  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly: Simplify definition of \episemInitium and
	\episemFinis.

	* lily/ligature-engraver.cc: Remove unused #include.

	* lily/vaticana-ligature-engraver.cc: Fix placement of dots.
	Bugfix: remove method check_for_prefix_loss(Item *) from global
	namespace to avoid namespace pollution.

2006-10-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION: release 2.9.22

	* ly/generate-documentation.ly: update option name.

	* lily/dynamic-text-spanner.cc (print): revert fix.

	* scm/define-grob-interfaces.scm
	(trill-pitch-accidental-interface):